feat: improve UI and UX for role-based access v0.5.7
## UI/UX Improvements:
- Hide student search field for STUDENT role in grades section (students see only their grades)
- Add vertical scroll to modal windows for better content accessibility
- Add filters to Students section for teachers (subject, group, search)
- Fix average grade calculation display using StudentService

## Teacher Access Control Enhancements:
- Remove TEACHER role from grades navigation (teachers use student section instead)
- Add role-based filtering in student section for teachers
- Teachers now see only their assigned subjects in filters
- Improved modal z-index management for proper stacking

## Technical Improvements:
- Updated TeacherServiceImpl to use StudentService for proper grade calculation
- Added setupGradesFilters() function for role-based UI configuration
- Enhanced modal CSS with overflow-y: auto for better scrolling
- Added loadStudentFilters() function with event listeners

## User Experience:
- Students: simplified grades view without unnecessary search
- Teachers: comprehensive student management with filtering
- Better modal usability with proper scrolling
- Correct average grade display for all roles

Version bumped to 0.5.7

--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -187,8 +187,14 @@
             
             <div class="section-controls">
                 <div class="filters">
-                    <input type="text" id="student-search" placeholder="🔍 Пошук студентів...">
-                    <button id="search-students" class="btn btn-primary">🔍 Пошук</button>
+                    <select id="student-filter-subject">
+                        <option value="">Всі дисципліни</option>
+                    </select>
+                    <input type="text" id="student-search" placeholder="🔍 Пошук студентів..." class="search-input">
+                    <select id="student-filter-group">
+                        <option value="">Всі групи</option>
+                    </select>
+                    <button id="filter-students" class="btn btn-primary">🔍 Фільтрувати</button>
                 </div>
             </div>
 
